--- a/viewer/templates/books.html
+++ b/viewer/templates/books.html
@@ -1,23 +1,23 @@
 {% extends 'index.html' %}
 {% block content %}
 
-  <h2><span>Knihy:</span> </h2>
-  {% for book in books %}
-    <table class="table">
-
-      <tr><td rowspan="7"><a href="{% url 'book' book.id %}"> <img src="{{ book.image }}" width=130px></a></td></tr>
-      <tr><td class="td_bold">Název:</td><td> {{ book.name }}</td></tr>
-      <tr><td class="td_bold">Originální název:</td><td> {{ book.original_name }}</td></tr>
-      <tr><td class="td_bold">Autor:</td><td><a href="{% url 'author' book.get_author_id %}"> {{ book.get_author }}</td></tr>
-      <tr><td class="td_bold">Rok:</td><td> {{ book.year }}</td></tr>
-      <tr><td class="td_right" colspan="3">
-        <a href="{% url 'book_update' book.id %}">edit</a>
-        <a href="{% url 'book_delete' book.id %}">delete</a></td></tr>
-    </table><hr>
-  {% endfor %}
+<h2><span>Knihy:</span> </h2>
+{% for book in books %}
+  <table class="table">
+    <tr><td rowspan="6"><a href="{% url 'book' book.id %}"> <img src="{{ book.image }}" width=130px></a></td></tr>
+    <tr><td class="td_bold">Název:</td><td> {{ book.name }}</td></tr>
+    <tr><td class="td_bold">Originální název:</td><td> {{ book.original_name }}</td></tr>
+    <tr><td class="td_bold">Autor:</td><td><a href="{% url 'author' book.get_author_id %}"> {{ book.get_author }}</td></tr>
+    <tr><td class="td_bold">Rok:</td><td> {{ book.year }}</td></tr>
+    <tr><td class="td_right" colspan="2">
+    {% if user.is_staff %}
+      <a href="{% url 'book_update' book.id %}">edit</a>
+      <a href="{% url 'book_delete' book.id %}">delete</a></td></tr>
+    {% endif %}
+  </table><hr>
+{% endfor %}
 
 <table class="table">
-
   <tr><td>
     {% if books.has_previous %}
       <a href="?page={{ books.previous_page_number }}">Previous</a>
