--- a/viewer/templates/booked.html
+++ b/viewer/templates/booked.html
@@ -11,6 +11,7 @@
        <td><strong>Rent date</strong></td>
        <td><strong>Return date</strong></td>
        <td><strong>Returned</strong></td>
+       <td><strong>Canceled</strong></td>
        </strong>
      </tr>
 
@@ -19,13 +20,45 @@
       <td>{{book.id_book.name}}</td>
       <td>{{book.id_user.username}}</td>
       <td>{{book.reservation_date}}</td>
-      <td>{{book.rent_date}}</td>
-      <td>{{book.return_date}}</td>
+      <td>
+        {% if book.returned_date or book.canceled %}
+
+        {% else %}
+          {% if book.rent_date %}
+            {{book.rent_date}}
+          {% else %}
+            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="rent" class="update-booked">
+            Rent
+            </button>
+          {% endif %}
+        {% endif %}
+      </td>
+      <td>
+        {% if book.canceled %}
+
+        {% else %}
+          {% if book.return_date %}
+            {{book.return_date}}
+          {% else %}
+            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="return" class="update-booked">
+            Return
+            </button>
+          {% endif %}
+        {% endif %}
+      </td>
       <td>{{book.returned}}</td>
       <td>
-        <button data-product={{book.id_book.id}} data-action="cancel" class="update-booked">
-          Cancel
-        </button>
+        {% if book.rent_date or book.returned_date %}
+
+        {% else %}
+          {% if book.canceled %}
+            Canceled
+          {% else %}
+          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="cancel" class="update-booked">
+            Cancel
+          </button>
+          {% endif %}
+        {% endif %}
       </td>
     </tr>
     {% endfor %}
@@ -38,13 +71,14 @@
     updateBtns[i].addEventListener('click', function (){
         var book_id = this.dataset.product
         var action = this.dataset.action
-        console.log('BookId:', book_id, 'Action: ', action)
+        var order_id = this.dataset.cart
+        console.log('BookId:', book_id, 'Action: ', action, 'order_id: ', order_id)
 
         console.log('User:', user)
-        updateBooked(book_id, action)
+        updateBooked(book_id, order_id, action)
     })
   }
-function updateBooked(book_id, action){
+function updateBooked(book_id, action, order_id){
     console.log('Sending data...')
 
     var url = '/change_booked/'
@@ -55,7 +89,7 @@ function updateBooked(book_id, action){
             'Content-Type': 'application/json',
             'X-CSRFToken': csrftoken,
         },
-        body:JSON.stringify({'book_id': book_id, 'action': action})
+        body:JSON.stringify({'book_id': book_id, 'action': action, 'order_id': order_id, })
     })
         .then((response) =>{
             return response.json()
