--- a/viewer/templates/nav_menu.html
+++ b/viewer/templates/nav_menu.html
@@ -4,8 +4,14 @@
         <li class="nav-item{% if request.path == '/authors/' %} active{% endif %}"><a href="{% url 'authors' %}">Authors</a></li>
         <li class="nav-item{% if request.path == '/books/' %} active{% endif %}"><a href="{% url 'books' %}">Books</a></li>
         <li class="nav-item{% if request.path == '/conditions/' %} active{% endif %}"><a href="{% url 'conditions' %}">Conditions</a></li>
-        <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}"><a href="{% url 'login' %}">Login</a></li>
         <li class="nav-item{% if request.path == '/cart/' %} active{% endif %}"><a href="{% url 'cart' %}">Cart</a></li>
+        <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}">
+          {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">LogOut</a>
+          {% else %}
+            <a href="{% url 'login' %}">LogIn</a>
+
+          {% endif %}
     </ul>
 </div>
 
@@ -19,3 +25,5 @@
         });
     });
 </script>
+
+
