--- a/viewer/templates/booked.html
+++ b/viewer/templates/booked.html
@@ -9,8 +9,9 @@
        <td><strong>User</strong></td>
        <td><strong>Reservation</strong></td>
        <td><strong>Rent date</strong></td>
+       <td><strong>Rent to</strong></td>
        <td><strong>Return date</strong></td>
-       <td><strong>Canceled</strong></td>
+       <td><strong></strong></td>
        </strong>
      </tr>
 
@@ -32,6 +33,7 @@
           {% endif %}
         {% endif %}
       </td>
+      <td>{{ book.return_to_date }}</td>
       <td>
         {% if book.canceled %}
 
@@ -47,7 +49,6 @@
       </td>
       <td>
         {% if book.rent_date or book.returned_date %}
-
         {% else %}
           {% if book.canceled %}
             Canceled
@@ -56,6 +57,11 @@
             Cancel
           </button>
           {% endif %}
+        {% endif %}
+        {% if book.rent_date and not book.return_date and not book.extend %}
+          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="extend" class="update-booked">
+            Extend
+          </button>
         {% endif %}
       </td>
     </tr>
