--- a/viewer/templates/user_booked.html
+++ b/viewer/templates/user_booked.html
@@ -15,9 +15,8 @@
        </strong>
      </tr>
 
-    {% for book in rented_books %}
     <tr>
-      <td>{{book.id_book.name}}</td>
+      <td>{{user.user.username}}</td>
       <td>{{book.id_user.user.username}}</td>
       <td>{{book.reservation_date}}</td>
       <td>
@@ -65,7 +64,7 @@
         {% endif %}
       </td>
     </tr>
-    {% endfor %}
+
   </table>
 
 <script>
@@ -79,16 +78,15 @@
         if (confirm(message)) {
             var book_id = this.dataset.product;
             var action = this.dataset.action;
-            var order_id = this.dataset.cart;
-            console.log('Action:', action, 'BookID:', book_id, 'OrderID:', order_id);
-            updateBooked(book_id, action, order_id)
+            console.log('Action:', action, 'BookID:', book_id);
+            updateBooked(book_id, action)
             // Zde můžete provést další akce po potvrzení
             // Například volání funkce pro aktualizaci
             // updateBooked(book_id, action);
         }
     }
 
-function updateBooked(book_id, action, order_id){
+function updateBooked(book_id, action, ){
     console.log('Sending data...')
 
     var url = '/change_booked/'
@@ -99,7 +97,7 @@ function updateBooked(book_id, action, order_id){
             'Content-Type': 'application/json',
             'X-CSRFToken': csrftoken,
         },
-        body:JSON.stringify({'book_id': book_id, 'action': action,'order_id': order_id})
+        body:JSON.stringify({'book_id': book_id, 'action': action,})
     })
         .then((response) =>{
             return response.json()
