--- a/viewer/templates/nav_menu.html
+++ b/viewer/templates/nav_menu.html
@@ -6,7 +6,7 @@
         <li class="nav-item{% if request.path == '/conditions/' %} active{% endif %}"><a href="{% url 'conditions' %}">Conditions</a></li>
         <li class="nav-item{% if request.path == '/cart/' %} active{% endif %}"><a href="{% url 'cart' %}">Cart</a></li>
         <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}">
-          {% if user.is_authenticated %}
+          {% if request.user.is_authenticated %}
             <a href="{% url 'logout' %}">LogOut</a>
           {% else %}
             <a href="{% url 'login' %}">LogIn</a>
