final - user page final- user booked

--- a/viewer/templates/cart.html
+++ b/viewer/templates/cart.html
@@ -39,7 +39,7 @@
         fetch(url, {redirect: "manual"})
         .then((response) => response.json())
         {
-            window.location.href = "/booked/"
+            window.location.href = "/index/"
         }
 
 
