--- a/viewer/templates/user_booked.html
+++ b/viewer/templates/user_booked.html
@@ -6,7 +6,6 @@
      <tr>
        <strong>
        <td><strong>Book name</strong></td>
-       <td><strong>User</strong></td>
        <td><strong>Reservation</strong></td>
        <td><strong>Rent date</strong></td>
        <td><strong>Rent to</strong></td>
@@ -14,57 +13,52 @@
        <td><strong></strong></td>
        </strong>
      </tr>
-
+    {% for order in orders %}
+    {% for order_item in order.orderitem_set.all %}
+    {% for rented_item in order_item.book.rented_set.all %}
+       {% if rented_item.id_user == user and rented_item.id_order == order%}
     <tr>
-      <td>{{user.user.username}}</td>
-      <td>{{book.id_user.user.username}}</td>
-      <td>{{book.reservation_date}}</td>
-      <td>
-        {% if book.returned_date or book.canceled %}
+      <td><a href="{% url 'book' order_item.book.id %}">{{order_item.book.name}}</a> </td>
 
-        {% else %}
-          {% if book.rent_date %}
-            {{book.rent_date}}
-          {% else %}
-            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="rent" class="update-booked">
-            Rent
-            </button>
-          {% endif %}
-        {% endif %}
-      </td>
-      <td>{{ book.return_to_date }}</td>
+      <td>{{ rented_item.reservation_date }}</td>
       <td>
-        {% if book.canceled %}
-
-        {% else %}
-          {% if book.return_date %}
-            {{book.return_date}}
-          {% else %}
-            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="return" class="update-booked">
-            Return
-            </button>
-          {% endif %}
+        {% if rented_item.rent_date %}
+        {{rented_item.rent_date}}
         {% endif %}
       </td>
       <td>
-        {% if book.rent_date or book.returned_date %}
+        {% if rented_item.return_to_date %}
+          {{ rented_item.return_to_date }}
+        {% endif %}
+      </td>
+      <td>
+        {% if rented_item.return_date %}
+          {{ rented_item.return_date }}
+        {% endif %}
+      </td>
+      <td>
+        {% if rented_item.rent_date or rented_item.returned_date %}
         {% else %}
-          {% if book.canceled %}
+          {% if rented_item.canceled %}
             Canceled
           {% else %}
-          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="cancel" class="update-booked">
+          <button data-product={{rented_item.id_book.id}} data-cart={{rented_item.id_order.id}} data-action="cancel" class="update-booked">
             Cancel
           </button>
           {% endif %}
         {% endif %}
-        {% if book.rent_date and not book.return_date and not book.extend %}
-          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="extend" class="update-booked">
+        {% if rented_item.rent_date and not rented_item.return_date and not rented_item.extend %}
+          <button data-product={{rented_item.id_book.id}} data-cart={{rented_item.id_order.id}} data-action="extend" class="update-booked">
             Extend
           </button>
         {% endif %}
       </td>
-    </tr>
 
+    </tr>
+    {% endif %}
+      {% endfor %}
+    {% endfor %}
+    {% endfor %}
   </table>
 
 <script>
@@ -78,15 +72,16 @@
         if (confirm(message)) {
             var book_id = this.dataset.product;
             var action = this.dataset.action;
+            var order_id = this.dataset.cart;
             console.log('Action:', action, 'BookID:', book_id);
-            updateBooked(book_id, action)
+            updateBooked(book_id, action, order_id)
             // Zde můžete provést další akce po potvrzení
             // Například volání funkce pro aktualizaci
             // updateBooked(book_id, action);
         }
     }
 
-function updateBooked(book_id, action, ){
+function updateBooked(book_id, action, order_id){
     console.log('Sending data...')
 
     var url = '/change_booked/'
@@ -97,7 +92,7 @@ function updateBooked(book_id, action, ){
             'Content-Type': 'application/json',
             'X-CSRFToken': csrftoken,
         },
-        body:JSON.stringify({'book_id': book_id, 'action': action,})
+        body:JSON.stringify({'book_id': book_id, 'action': action, 'order_id': order_id})
     })
         .then((response) =>{
             return response.json()
