--- a/viewer/templates/index.html
+++ b/viewer/templates/index.html
@@ -10,7 +10,9 @@
   <script type="text/javascript" src="{% static 'js/arial.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/cuf_run.js' %}"></script>
   <script type="text/javascript">
-    var user = '{{request.user}}' function getToken(name) { let cookieValue = null;
+    var user = '{{request.user}}';
+    function getToken(name) { let cookieValue = null;
+
                if (document.cookie && document.cookie !== '') { const cookies = document.cookie.split(';');
                    for (let i = 0; i < cookies.length; i++) {
                        const cookie = cookies[i].trim();
