--- a/viewer/templates/booked.html
+++ b/viewer/templates/booked.html
@@ -27,7 +27,7 @@
           {% if book.rent_date %}
             {{book.rent_date}}
           {% else %}
-            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="rent" class="update-booked">
+            <button data-product={{book.id_book.id}} data-user={{book.id_user.user.id}} data-cart={{book.id_order.id}} data-action="rent" class="update-booked">
             Rent
             </button>
           {% endif %}
@@ -41,7 +41,7 @@
           {% if book.return_date %}
             {{book.return_date}}
           {% else %}
-            <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="return" class="update-booked">
+            <button data-product={{book.id_book.id}} data-user={{book.id_user.user.id}} data-cart={{book.id_order.id}} data-action="return" class="update-booked">
             Return
             </button>
           {% endif %}
@@ -53,13 +53,13 @@
           {% if book.canceled %}
             Canceled
           {% else %}
-          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="cancel" class="update-booked">
+          <button data-product={{book.id_book.id}} data-user={{book.id_user.user.id}} data-cart={{book.id_order.id}} data-action="cancel" class="update-booked">
             Cancel
           </button>
           {% endif %}
         {% endif %}
         {% if book.rent_date and not book.return_date and not book.extend %}
-          <button data-product={{book.id_book.id}} data-cart={{book.id_order.id}} data-action="extend" class="update-booked">
+          <button data-product={{book.id_book.id}} data-user={{book.id_user.user.id}} data-cart={{book.id_order.id}} data-action="extend" class="update-booked">
             Extend
           </button>
         {% endif %}
@@ -80,16 +80,17 @@
             var book_id = this.dataset.product;
             var action = this.dataset.action;
             var order_id = this.dataset.cart;
+            var user1 = this.dataset.user;
             console.log('Action:', action, 'BookID:', book_id, 'OrderID:', order_id);
-            updateBooked(book_id, action, order_id)
+            updateBooked(book_id, action, order_id, user1)
             // Zde můžete provést další akce po potvrzení
             // Například volání funkce pro aktualizaci
             // updateBooked(book_id, action);
         }
     }
 
-function updateBooked(book_id, action, order_id){
-    console.log('Sending data...')
+function updateBooked(book_id, action, order_id, user1){
+    console.log('Sending data...');
 
     var url = '/change_booked/'
 
@@ -99,7 +100,7 @@ function updateBooked(book_id, action, order_id){
             'Content-Type': 'application/json',
             'X-CSRFToken': csrftoken,
         },
-        body:JSON.stringify({'book_id': book_id, 'action': action,'order_id': order_id})
+        body:JSON.stringify({'book_id': book_id, 'action': action,'order_id': order_id, 'person': user1})
     })
         .then((response) =>{
             return response.json()
