--- a/viewer/templates/book.html
+++ b/viewer/templates/book.html
@@ -11,6 +11,7 @@
     <tr><td class="td_bold">Jazyk:</td><td> {{ book.get_language }} </td></tr>
     <tr><td class="td_bold">Stránek:</td><td> {{ book.page }} </td></tr>
     <tr><td class="td_bold">ISBN:</td><td> {{ book.isbn }} </td></tr>
+    <tr><td class="td_bold">Dostupnost:</td><td> {{ book.amount }}</td> </tr>
     <tr>
       <td>
 
