genres updated in search (without URL)

--- a/viewer/templates/search.html
+++ b/viewer/templates/search.html
@@ -37,6 +37,14 @@
       <i>Nothing found</i>
     {% endfor %}
     </ul>
+  <h3>Genres:</h3>
+    <ul>
+    {% for genre in genres %}
+      <li>{{ genre }}</li>
+    {% empty %}
+      <i>Nothing found</i>
+    {% endfor %}
+    </ul>
   <h3>Users:</h3>
     <ul>
     {% for user in users %}
