almost final version

--- a/viewer/templates/book.html
+++ b/viewer/templates/book.html
@@ -34,7 +34,7 @@
             {% endif %}
           {% endif %}
         {% else %}
-          You have to be <button >Login</button>
+        You have to be <a href="{% url 'login' %}"><button >Login</button></a>
         {% endif %}
       </td>
       <td class="td_right" colspan="2">
