--- a/viewer/templates/genres.html
+++ b/viewer/templates/genres.html
@@ -1,20 +1,25 @@
 {% extends 'index.html' %}
 {% block content %}
   <h2><span>Žánry:</span></h2>
-
+{% if user.is_authenticated%}
   <table>
     <tr>
       <td><a href="{% url 'new_genre' %}">Přidat nový žánr</a></td>
     </tr>
-  </table><hr>
+  </table>
+{% endif %}
+<hr>
 
   {% for genre in genres %}
     <table class="table">
       <tr>
-        <td class="td_bold"> {{ genre.name }} </td>
+        <td class="td_bold"> <a href="{% url 'genre' genre.id%}">{{ genre.name }} </a> </td>
+        {% if user.is_authenticated%}
         <td class="td_right">
           <a href="{% url 'genre_update' genre.id %}">edit</a>
-          <a href="{% url 'genre_delete' genre.id %}">delete</a></td>
+          <a href="{% url 'genre_delete' genre.id %}">delete</a>
+        </td>
+        {% endif %}
       </tr>
     </table>
     {% endfor %}
