--- a/viewer/templates/index.html
+++ b/viewer/templates/index.html
@@ -92,6 +92,7 @@
               <ul class="sb_menu">
                 {% if request.user.is_authenticated %}
                   You are log in as: <strong> {{ user.username }} </strong>
+                  <li><a href="{% url 'logout' %}">Logout</a></li>
                   <li><a href="{% url 'user_booked' user.id %}">Orders</a></li>
                 {% else %}
                   You should <a href="{% url 'login' %}">Log In</a> or <a href="{% url 'signup' %}">Sign Up</a>
