--- a/viewer/templates/nav_menu.html
+++ b/viewer/templates/nav_menu.html
@@ -3,15 +3,12 @@
         <li class="nav-item{% if request.path == '/' %} active{% endif %}"><a href="{% url 'home' %}">Home</a></li>
         <li class="nav-item{% if request.path == '/authors/' %} active{% endif %}"><a href="{% url 'authors' %}">Authors</a></li>
         <li class="nav-item{% if request.path == '/books/' %} active{% endif %}"><a href="{% url 'books' %}">Books</a></li>
+        <li class="nav-item{% if request.path == '/genres/' %} active{% endif %}"><a href="{% url 'genres' %}">Genres</a></li>
+
         <li class="nav-item{% if request.path == '/conditions/' %} active{% endif %}"><a href="{% url 'conditions' %}">Conditions</a></li>
         <li class="nav-item{% if request.path == '/cart/' %} active{% endif %}"><a href="{% url 'cart' %}">Cart</a></li>
-        <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}">
-          {% if request.user.is_authenticated %}
-            <a href="{% url 'logout' %}">LogOut</a>
-          {% else %}
-            <a href="{% url 'login' %}">LogIn</a>
 
-          {% endif %}
+
     </ul>
 </div>
 
